--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -6,16 +6,31 @@
    "source": [
     "# PythonFMU example\n",
     "\n",
-    "This is an example on how to use PythonFMU to export a Python script as FMU."
+    "This is an example on how to use PythonFMU to export a Python script as FMU compliant with the CoSimulation FMI 2.0 specification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Installation\n",
+    "\n",
+    "But first thing first, you need the `pythonfmu` Python package. To install it, you can use the pip package manager:\n",
+    "\n",
+    "```bash\n",
+    "python -m pip install pythonfmu\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The script\n",
+    "## The to-be-exported script\n",
     "\n",
-    "First you will need to interface your Python code with the FMI facade provided through an abstract class `pythonfmu.Fmi2Slave`.\n",
+    "To export Python code as FMU, you will need to interface your code with the FMI facade provided through an abstract class `pythonfmu.Fmi2Slave`.\n",
     "\n",
     "In the following example, you will interface a simple resistor code."
    ]
