Change some wording

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PythonFMU example\n",
     "\n",
-    "This is an example on how to use PythonFMU to export a Python script as FMU compliant with the CoSimulation FMI 2.0 specification."
+    "This is an example on how to use PythonFMU in order to export a Python script as a FMI 2.0 for CoSimulation compliant FMU."
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## Installation\n",
     "\n",
-    "But first thing first, you need the `pythonfmu` Python package. To install it, you can use the pip package manager:\n",
+    "But first thing first, you will need the `pythonfmu` Python package. To install it, you can use the pip package manager:\n",
     "\n",
     "```bash\n",
     "python -m pip install pythonfmu\n",
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the code as a *parameter*, you could change it:"
+    "The code specifies a *parameter*, you could change it:"
    ]
   },
   {
@@ -253,7 +253,7 @@
     "p.plot(res['time'], res['i'], res2['time'], res2['i'])\n",
     "p.xlabel('time')\n",
     "p.ylabel('Voltage [V]')\n",
-    "p.show();"
+    "p.show()"
    ]
   }
  ],
