--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code specifies a *parameter*, you could change it:"
+    "The code specifies a *parameter*, which you could change:"
    ]
   },
   {
