Revert change to be safe

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -253,7 +253,7 @@
     "p.plot(res['time'], res['i'], res2['time'], res2['i'])\n",
     "p.xlabel('time')\n",
     "p.ylabel('Voltage [V]')\n",
-    "p.show()"
+    "p.show();"
    ]
   }
  ],
