Switch to subcommands cli API

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "## Generate the FMU\n",
     "\n",
-    "The FMU is generate through the command line tool `pythonfmu-builder`."
+    "The FMU is generate through the command line tool `pythonfmu build`."
    ]
   },
   {
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pythonfmu-builder -f ./demoslave.py --no-external-tool"
+    "!pythonfmu build -f ./demoslave.py --no-external-tool"
    ]
   },
   {
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: pythonfmu-builder [-h] [-v] -f SCRIPT_FILE [-d DEST]\n",
+      "usage: pythonfmu build [-h] [-v] -f SCRIPT_FILE [-d DEST]\n",
       "                         [--doc DOCUMENTATION_FOLDER] [--no-external-tool]\n",
       "                         [--no-variable-step] [--interpolate-inputs]\n",
       "                         [--only-one-per-process] [--handle-state]\n",
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "!pythonfmu-builder -h"
+    "!pythonfmu build -h"
    ]
   },
   {
@@ -268,7 +268,7 @@
     "\n",
     "Python script can use third-party libraries. PythonFMU does not include such dependencies within the FMU. So it is up to the end user to installed the dependent packages.\n",
     "\n",
-    "However to help the process, you could include as project file in your FMU a requirement file. Then the end user will be able to install the dependencies using the `pythonfmu-deploy` tool. The tool supports for now two packages manager: `pip` and `conda`. Moreover if you use the default convention for naming the requirement file (i.e. *requirements.txt* for `pip` and *environment.yml* for `conda`), the end user won't need to specify the file name nor the package manager to be used.\n",
+    "However to help the process, you could include as project file in your FMU a requirement file. Then the end user will be able to install the dependencies using the `pythonfmu deploy` tool. The tool supports for now two packages manager: `pip` and `conda`. Moreover if you use the default convention for naming the requirement file (i.e. *requirements.txt* for `pip` and *environment.yml* for `conda`), the end user won't need to specify the file name nor the package manager to be used.\n",
     "\n",
     "In the following paragraphs, an example requiring `scipy` will be demonstated. The Python facade is defined in the `scipyslave.py` file and the requirement are provided in `environment.yml` for usage with `conda`."
    ]
@@ -282,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: pythonfmu-deploy [-h] [-v] -f FMU [-e ENVIRONMENT] [{pip,conda}]\n",
+      "usage: pythonfmu deploy [-h] [-v] -f FMU [-e ENVIRONMENT] [{pip,conda}]\n",
       "\n",
       "Deploy a Python FMU. The command will look in the `resources` folder for one\n",
       "of the following files: - `requirements.txt`: Install dependencies using pip\n",
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "!pythonfmu-deploy -h"
+    "!pythonfmu deploy -h"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pythonfmu-builder -f sympyslave.py environment.yml --no-external-tool"
+    "!pythonfmu build -f sympyslave.py environment.yml --no-external-tool"
    ]
   },
   {
@@ -386,7 +386,7 @@
     }
    ],
    "source": [
-    "!pythonfmu-deploy -f SympySlave.fmu"
+    "!pythonfmu deploy -f SympySlave.fmu"
    ]
   },
   {
