Corrections following review

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "## Generate the FMU\n",
     "\n",
-    "The FMU is generate through the command line tool `pythonfmu build`."
+    "The FMU is generated through the command line tool `pythonfmu build`."
    ]
   },
   {
